# hmscalc

./: .coverage  .dockerignore  .gitignore  .python-version  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  lint-check.sh  lint.sh  mkdocs.yml  pyproject.toml  runtests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
docs/: API_STABILITY.md  INPUT_POLICY.md  MIGRATION.md  getting-started.md  index.md
docs/articles/: v1-stable-release.md  work-time-tutorial.md
docs/recipes/: buckets.md  iso8601.md  scheduling.md  work-time.md
hmscalc/: __init__.py  __main__.py  buckets.py  business_days.py  cli.py  dates.py  exceptions.py  hms_datetime.py  hms_time.py  pandas_extra.py  scheduling.py  tz.py
tests/: __init__.py  test_buckets.py  test_business_days.py  test_cli.py  test_dates.py  test_hms_datetime.py  test_hms_time.py  test_iso8601_dates.py  test_lenient_mode.py  test_pandas_extra.py  test_phase3_adversarial.py  test_properties.py  test_properties_v11.py  test_scheduling.py  test_scheduling_adversarial.py  test_tz.py  test_v11_adversarial.py
