[tool.poetry]
name = "hmscalc"
version = "0.3.0"
description = "A Python library for performing arithmetic with HH:MM[:SS] formatted time strings."
authors = ["M0209 <masanorimurakoshi0209@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hmscalc" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.12.0"
mypy = "^1.9.0"
ruff = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["D211", "D212", "E", "F", "I", "N", "B", "D"]
ignore = ["D203", "D213"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.11
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true