[tool.poetry]
name = "hmscalc"
version = "1.0.3"
description = "Add and subtract HH:MM[:SS] time strings in Python — durations, aggregation, and timedelta integration."
authors = ["M0209 <masanorimurakoshi0209@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hmscalc" }]
keywords = ["time", "duration", "hms", "hours", "minutes", "seconds", "timedelta"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
Homepage = "https://github.com/masanori0209/hmscalc"
Repository = "https://github.com/masanori0209/hmscalc"
Documentation = "https://github.com/masanori0209/hmscalc#readme"
Changelog = "https://github.com/masanori0209/hmscalc/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/masanori0209/hmscalc/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
hmscalc = "hmscalc.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = ">=6,<8"
black = ">=24,<26"
isort = "^6.1.0"
mypy = "^1.9.0"
ruff = "^0.15.0"
hypothesis = { version = "^6.100.0", python = ">=3.10" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["hmscalc"]
omit = ["hmscalc/__main__.py"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["D211", "D212", "E", "F", "I", "N", "B", "D"]
ignore = ["D203", "D213"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.11
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true